<resources>
    <string name="app_name">My Application</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="enter_your_bank_account_details">Enter Your Bank Account Details</string>
    <string name="email">email</string>
    <string name="account_number">Account Number</string>
    <string name="account_holders_name">Account Holders Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_cad_order_is_being_processed">Your cad order is being processed.</string>
    <string name="congratulations">Congratulations!</string>
    <string name="check_card_status">Check Card Status</string>
    <string name="spent_this_month">Spent this month</string>
    <string name="set_budget">Set Budget</string>
    <string name="services">Services</string>
    <string name="add_expense">Add Expense</string>
    <string name="income_proof">Income Proof</string>
    <string name="full_name_as_in_aadhaar">Full name as in Aadhaar</string>
    <string name="tell_us_more_about_nyourself">Tell us more about  \nyourself</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="referral_code_optional">Referral Code (optional)</string>
    <string name="continue1">CONTINUE</string>
    <string name="identity_verification">Identity Verification</string>
    <string name="selfie_with_agent">Selfie with Agent</string>
    <string name="to_verify_that_you_ve_a_pan_card">To Verify that you’ve a PAN card</string>
    <string name="uploaded">Uploaded</string>
    <string name="govt_id_type">Govt. ID Type</string>
    <string name="canceled_invalid_document_type_please_reupload">Canceled! Invalid Document type. Please Reupload</string>
    <string name="reupload">Reupload</string>
    <string name="govt_id_back">Govt. ID Back</string>
    <string name="pending">Pending</string>
    <string name="not_uploaded">Not Uploaded</string>
    <string name="loan">Loan</string>
    <string name="cash_loans">Cash Loans</string>
    <string name="may_14_2019_to_may_14_2019">May 14, 2019 to May 14, 2019</string>
    <string name="loan_id">Loan ID</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="tenture">Tenture</string>
    <string name="_322342">322342</string>
    <string name="_3540_0">3540.0</string>
    <string name="_6_months">6 Months</string>
    <string name="select_bank_account">Select Bank Account</string>
    <string name="bank_account_details">Bank Account Details</string>
    <string name="rs_0_00">RS 0.00</string>
    <string name="amazon">Amazon</string>
    <string name="ifsc_code">IFSC Code</string>
</resources>
